project/ExprParser.cpp

// Generated from Expr.g4 by ANTLR 4.8


#include "ExprVisitor.h"

#include "ExprParser.h"


using namespace antlrcpp;
using namespace antlr4;

ExprParser::ExprParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ExprParser::~ExprParser() {
  delete _interpreter;
}

std::string ExprParser::getGrammarFileName() const {
  return "Expr.g4";
}

const std::vector<std::string>& ExprParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ExprParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

ExprParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::ProgContext::EOF() {
  return getToken(ExprParser::EOF, 0);
}

std::vector<ExprParser::MethodDeclContext *> ExprParser::ProgContext::methodDecl() {
  return getRuleContexts<ExprParser::MethodDeclContext>();
}

ExprParser::MethodDeclContext* ExprParser::ProgContext::methodDecl(size_t i) {
  return getRuleContext<ExprParser::MethodDeclContext>(i);
}


size_t ExprParser::ProgContext::getRuleIndex() const {
  return ExprParser::RuleProg;
}


antlrcpp::Any ExprParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ProgContext* ExprParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, ExprParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(27); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(26);
      methodDecl();
      setState(29); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::T__0)
      | (1ULL << ExprParser::T__14)
      | (1ULL << ExprParser::T__15)
      | (1ULL << ExprParser::T__16)
      | (1ULL << ExprParser::T__17)
      | (1ULL << ExprParser::T__18)
      | (1ULL << ExprParser::T__19))) != 0));
    setState(31);
    match(ExprParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodDeclContext ------------------------------------------------------------------

ExprParser::MethodDeclContext::MethodDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::MethodDeclContext::IDENTIFIER() {
  return getToken(ExprParser::IDENTIFIER, 0);
}

ExprParser::BlockContext* ExprParser::MethodDeclContext::block() {
  return getRuleContext<ExprParser::BlockContext>(0);
}

ExprParser::TypeContext* ExprParser::MethodDeclContext::type() {
  return getRuleContext<ExprParser::TypeContext>(0);
}

std::vector<ExprParser::MethodArg1Context *> ExprParser::MethodDeclContext::methodArg1() {
  return getRuleContexts<ExprParser::MethodArg1Context>();
}

ExprParser::MethodArg1Context* ExprParser::MethodDeclContext::methodArg1(size_t i) {
  return getRuleContext<ExprParser::MethodArg1Context>(i);
}


size_t ExprParser::MethodDeclContext::getRuleIndex() const {
  return ExprParser::RuleMethodDecl;
}


antlrcpp::Any ExprParser::MethodDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitMethodDecl(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::MethodDeclContext* ExprParser::methodDecl() {
  MethodDeclContext *_localctx = _tracker.createInstance<MethodDeclContext>(_ctx, getState());
  enterRule(_localctx, 2, ExprParser::RuleMethodDecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ExprParser::T__14:
      case ExprParser::T__15:
      case ExprParser::T__16:
      case ExprParser::T__17:
      case ExprParser::T__18:
      case ExprParser::T__19: {
        setState(33);
        type();
        break;
      }

      case ExprParser::T__0: {
        setState(34);
        match(ExprParser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(37);
    match(ExprParser::IDENTIFIER);
    setState(38);
    match(ExprParser::T__1);
    setState(47);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::T__14)
      | (1ULL << ExprParser::T__15)
      | (1ULL << ExprParser::T__16)
      | (1ULL << ExprParser::T__17)
      | (1ULL << ExprParser::T__18)
      | (1ULL << ExprParser::T__19))) != 0)) {
      setState(39);
      methodArg1();
      setState(44);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ExprParser::T__2) {
        setState(40);
        match(ExprParser::T__2);
        setState(41);
        methodArg1();
        setState(46);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(49);
    match(ExprParser::T__3);
    setState(50);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodArg1Context ------------------------------------------------------------------

ExprParser::MethodArg1Context::MethodArg1Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::MethodArg1Context::getRuleIndex() const {
  return ExprParser::RuleMethodArg1;
}

void ExprParser::MethodArg1Context::copyFrom(MethodArg1Context *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MethodArg2DContext ------------------------------------------------------------------

ExprParser::TypeContext* ExprParser::MethodArg2DContext::type() {
  return getRuleContext<ExprParser::TypeContext>(0);
}

tree::TerminalNode* ExprParser::MethodArg2DContext::IDENTIFIER() {
  return getToken(ExprParser::IDENTIFIER, 0);
}

std::vector<ExprParser::ExprContext *> ExprParser::MethodArg2DContext::expr() {
  return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::MethodArg2DContext::expr(size_t i) {
  return getRuleContext<ExprParser::ExprContext>(i);
}

ExprParser::MethodArg2DContext::MethodArg2DContext(MethodArg1Context *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::MethodArg2DContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitMethodArg2D(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MethodArgContext ------------------------------------------------------------------

ExprParser::TypeContext* ExprParser::MethodArgContext::type() {
  return getRuleContext<ExprParser::TypeContext>(0);
}

tree::TerminalNode* ExprParser::MethodArgContext::IDENTIFIER() {
  return getToken(ExprParser::IDENTIFIER, 0);
}

ExprParser::MethodArgContext::MethodArgContext(MethodArg1Context *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::MethodArgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitMethodArg(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MethodArg1DContext ------------------------------------------------------------------

ExprParser::TypeContext* ExprParser::MethodArg1DContext::type() {
  return getRuleContext<ExprParser::TypeContext>(0);
}

tree::TerminalNode* ExprParser::MethodArg1DContext::IDENTIFIER() {
  return getToken(ExprParser::IDENTIFIER, 0);
}

ExprParser::ExprContext* ExprParser::MethodArg1DContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

ExprParser::MethodArg1DContext::MethodArg1DContext(MethodArg1Context *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::MethodArg1DContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitMethodArg1D(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::MethodArg1Context* ExprParser::methodArg1() {
  MethodArg1Context *_localctx = _tracker.createInstance<MethodArg1Context>(_ctx, getState());
  enterRule(_localctx, 4, ExprParser::RuleMethodArg1);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<MethodArg1Context *>(_tracker.createInstance<ExprParser::MethodArgContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(52);
      type();
      setState(53);
      match(ExprParser::IDENTIFIER);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<MethodArg1Context *>(_tracker.createInstance<ExprParser::MethodArg1DContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(55);
      type();
      setState(56);
      match(ExprParser::IDENTIFIER);
      setState(57);
      match(ExprParser::T__4);
      setState(58);
      expr(0);
      setState(59);
      match(ExprParser::T__5);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<MethodArg1Context *>(_tracker.createInstance<ExprParser::MethodArg2DContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(61);
      type();
      setState(62);
      match(ExprParser::IDENTIFIER);
      setState(63);
      match(ExprParser::T__4);
      setState(64);
      expr(0);
      setState(65);
      match(ExprParser::T__5);
      setState(66);
      match(ExprParser::T__4);
      setState(67);
      expr(0);
      setState(68);
      match(ExprParser::T__5);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodCallContext ------------------------------------------------------------------

ExprParser::MethodCallContext::MethodCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::MethodCallContext::STRING() {
  return getToken(ExprParser::STRING, 0);
}

std::vector<ExprParser::ExprContext *> ExprParser::MethodCallContext::expr() {
  return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::MethodCallContext::expr(size_t i) {
  return getRuleContext<ExprParser::ExprContext>(i);
}


size_t ExprParser::MethodCallContext::getRuleIndex() const {
  return ExprParser::RuleMethodCall;
}


antlrcpp::Any ExprParser::MethodCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitMethodCall(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::MethodCallContext* ExprParser::methodCall() {
  MethodCallContext *_localctx = _tracker.createInstance<MethodCallContext>(_ctx, getState());
  enterRule(_localctx, 6, ExprParser::RuleMethodCall);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(ExprParser::T__6);
    setState(73);
    match(ExprParser::STRING);
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::T__2) {
      setState(74);
      match(ExprParser::T__2);

      setState(75);
      expr(0);
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(81);
    match(ExprParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ExprParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExprParser::StatementContext *> ExprParser::BlockContext::statement() {
  return getRuleContexts<ExprParser::StatementContext>();
}

ExprParser::StatementContext* ExprParser::BlockContext::statement(size_t i) {
  return getRuleContext<ExprParser::StatementContext>(i);
}


size_t ExprParser::BlockContext::getRuleIndex() const {
  return ExprParser::RuleBlock;
}


antlrcpp::Any ExprParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::BlockContext* ExprParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 8, ExprParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(ExprParser::T__8);
    setState(85); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(84);
      statement();
      setState(87); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::T__1)
      | (1ULL << ExprParser::T__6)
      | (1ULL << ExprParser::T__8)
      | (1ULL << ExprParser::T__14)
      | (1ULL << ExprParser::T__15)
      | (1ULL << ExprParser::T__16)
      | (1ULL << ExprParser::T__17)
      | (1ULL << ExprParser::T__18)
      | (1ULL << ExprParser::T__19)
      | (1ULL << ExprParser::IF)
      | (1ULL << ExprParser::WHILE)
      | (1ULL << ExprParser::FOR)
      | (1ULL << ExprParser::RETURN)
      | (1ULL << ExprParser::BREAK)
      | (1ULL << ExprParser::CONTINUE)
      | (1ULL << ExprParser::UNARY_OP)
      | (1ULL << ExprParser::INT)
      | (1ULL << ExprParser::IDENTIFIER)
      | (1ULL << ExprParser::FLOAT)
      | (1ULL << ExprParser::STRING)
      | (1ULL << ExprParser::CHAR)
      | (1ULL << ExprParser::BOOL))) != 0));
    setState(89);
    match(ExprParser::T__9);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

ExprParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::StatementContext::getRuleIndex() const {
  return ExprParser::RuleStatement;
}

void ExprParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- StatBlockContext ------------------------------------------------------------------

ExprParser::BlockContext* ExprParser::StatBlockContext::block() {
  return getRuleContext<ExprParser::BlockContext>(0);
}

ExprParser::StatBlockContext::StatBlockContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::StatBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStatBlock(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatMethodCallContext ------------------------------------------------------------------

ExprParser::MethodCallContext* ExprParser::StatMethodCallContext::methodCall() {
  return getRuleContext<ExprParser::MethodCallContext>(0);
}

ExprParser::StatMethodCallContext::StatMethodCallContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::StatMethodCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStatMethodCall(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatWhileContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::StatWhileContext::WHILE() {
  return getToken(ExprParser::WHILE, 0);
}

ExprParser::ExprContext* ExprParser::StatWhileContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

ExprParser::BlockContext* ExprParser::StatWhileContext::block() {
  return getRuleContext<ExprParser::BlockContext>(0);
}

ExprParser::StatWhileContext::StatWhileContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::StatWhileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStatWhile(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatVariableContext ------------------------------------------------------------------

ExprParser::VariableContext* ExprParser::StatVariableContext::variable() {
  return getRuleContext<ExprParser::VariableContext>(0);
}

ExprParser::StatVariableContext::StatVariableContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::StatVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStatVariable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatAssignExprContext ------------------------------------------------------------------

ExprParser::LocationContext* ExprParser::StatAssignExprContext::location() {
  return getRuleContext<ExprParser::LocationContext>(0);
}

tree::TerminalNode* ExprParser::StatAssignExprContext::ASSIGN() {
  return getToken(ExprParser::ASSIGN, 0);
}

ExprParser::ExprContext* ExprParser::StatAssignExprContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

ExprParser::StatAssignExprContext::StatAssignExprContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::StatAssignExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStatAssignExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatementControlContext ------------------------------------------------------------------

ExprParser::ControlContext* ExprParser::StatementControlContext::control() {
  return getRuleContext<ExprParser::ControlContext>(0);
}

ExprParser::StatementControlContext::StatementControlContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::StatementControlContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStatementControl(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatForContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::StatForContext::FOR() {
  return getToken(ExprParser::FOR, 0);
}

std::vector<ExprParser::ExprContext *> ExprParser::StatForContext::expr() {
  return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::StatForContext::expr(size_t i) {
  return getRuleContext<ExprParser::ExprContext>(i);
}

ExprParser::BlockContext* ExprParser::StatForContext::block() {
  return getRuleContext<ExprParser::BlockContext>(0);
}

ExprParser::StatForContext::StatForContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::StatForContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStatFor(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatIfElseContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::StatIfElseContext::IF() {
  return getToken(ExprParser::IF, 0);
}

ExprParser::ExprContext* ExprParser::StatIfElseContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

std::vector<ExprParser::BlockContext *> ExprParser::StatIfElseContext::block() {
  return getRuleContexts<ExprParser::BlockContext>();
}

ExprParser::BlockContext* ExprParser::StatIfElseContext::block(size_t i) {
  return getRuleContext<ExprParser::BlockContext>(i);
}

tree::TerminalNode* ExprParser::StatIfElseContext::ELSE() {
  return getToken(ExprParser::ELSE, 0);
}

ExprParser::StatIfElseContext::StatIfElseContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::StatIfElseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStatIfElse(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatTernaryContext ------------------------------------------------------------------

ExprParser::ExprContext* ExprParser::StatTernaryContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

std::vector<ExprParser::StatementContext *> ExprParser::StatTernaryContext::statement() {
  return getRuleContexts<ExprParser::StatementContext>();
}

ExprParser::StatementContext* ExprParser::StatTernaryContext::statement(size_t i) {
  return getRuleContext<ExprParser::StatementContext>(i);
}

ExprParser::StatTernaryContext::StatTernaryContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::StatTernaryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitStatTernary(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::StatementContext* ExprParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 10, ExprParser::RuleStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(134);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::StatIfElseContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(91);
      match(ExprParser::IF);
      setState(92);
      match(ExprParser::T__1);
      setState(93);
      expr(0);
      setState(94);
      match(ExprParser::T__3);
      setState(95);
      block();
      setState(98);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ExprParser::ELSE) {
        setState(96);
        match(ExprParser::ELSE);
        setState(97);
        block();
      }
      break;
    }

    case 2: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::StatWhileContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(100);
      match(ExprParser::WHILE);
      setState(101);
      match(ExprParser::T__1);
      setState(102);
      expr(0);
      setState(103);
      match(ExprParser::T__3);
      setState(104);
      block();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::StatTernaryContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(106);
      expr(0);
      setState(107);
      match(ExprParser::T__10);
      setState(108);
      statement();
      setState(109);
      match(ExprParser::T__11);
      setState(110);
      statement();
      setState(111);
      match(ExprParser::T__12);
      break;
    }

    case 4: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::StatForContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(113);
      match(ExprParser::FOR);
      setState(114);
      match(ExprParser::T__1);
      setState(115);
      expr(0);
      setState(116);
      match(ExprParser::T__12);
      setState(117);
      expr(0);
      setState(118);
      match(ExprParser::T__12);
      setState(119);
      expr(0);
      setState(120);
      match(ExprParser::T__3);
      setState(121);
      block();
      break;
    }

    case 5: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::StatAssignExprContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(123);
      location();
      setState(124);
      match(ExprParser::ASSIGN);
      setState(125);
      expr(0);
      setState(126);
      match(ExprParser::T__12);
      break;
    }

    case 6: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::StatementControlContext>(_localctx));
      enterOuterAlt(_localctx, 6);
      setState(128);
      control();
      setState(129);
      match(ExprParser::T__12);
      break;
    }

    case 7: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::StatVariableContext>(_localctx));
      enterOuterAlt(_localctx, 7);
      setState(131);
      variable();
      break;
    }

    case 8: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::StatBlockContext>(_localctx));
      enterOuterAlt(_localctx, 8);
      setState(132);
      block();
      break;
    }

    case 9: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<ExprParser::StatMethodCallContext>(_localctx));
      enterOuterAlt(_localctx, 9);
      setState(133);
      methodCall();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

ExprParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::TypeContext* ExprParser::VariableContext::type() {
  return getRuleContext<ExprParser::TypeContext>(0);
}

std::vector<ExprParser::DeclareContext *> ExprParser::VariableContext::declare() {
  return getRuleContexts<ExprParser::DeclareContext>();
}

ExprParser::DeclareContext* ExprParser::VariableContext::declare(size_t i) {
  return getRuleContext<ExprParser::DeclareContext>(i);
}


size_t ExprParser::VariableContext::getRuleIndex() const {
  return ExprParser::RuleVariable;
}


antlrcpp::Any ExprParser::VariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitVariable(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::VariableContext* ExprParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 12, ExprParser::RuleVariable);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(136);
    type();
    setState(137);
    declare();
    setState(142);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::T__2) {
      setState(138);
      match(ExprParser::T__2);
      setState(139);
      declare();
      setState(144);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(145);
    match(ExprParser::T__12);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclareContext ------------------------------------------------------------------

ExprParser::DeclareContext::DeclareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::DeclareContext::getRuleIndex() const {
  return ExprParser::RuleDeclare;
}

void ExprParser::DeclareContext::copyFrom(DeclareContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}
